--- a/src/app/modules/atividades/components/atividades-table/atividades-table.component.html
+++ b/src/app/modules/atividades/components/atividades-table/atividades-table.component.html
@@ -106,7 +106,7 @@
               </div>
             </th>
 
-            <th>
+            <th *appHasRole="['ADMIN']">
               <div class="flex justify-content-center">
                 Data de Criação
               </div>
@@ -157,7 +157,7 @@
                 {{atividade?.usuarioResponsavel.nome}}
               </div>
             </td>
-            <td>
+            <td *appHasRole="['ADMIN']">
               <div class="flex justify-content-center">
                 {{atividade?.dataCriacao | date: 'dd/MM/yyyy HH:mm:ss'}}
               </div>
