--- a/src/app/modules/projetos/components/usuario-projetos-form/usuario-projetos-form.component.html
+++ b/src/app/modules/projetos/components/usuario-projetos-form/usuario-projetos-form.component.html
@@ -19,18 +19,36 @@
           <ng-template pTemplate="header">
             <tr>
               <th>
-                <div class="flex justify-content-center">
-                  Nome
+                <div class="flex justify-content-center align-items-center">
+                  <div class="flex justify-content-center">
+                    Nome
+                  </div>
+                  <div class="flex justify-content-between align-items-center">
+                    <p-columnFilter type="text" field="nome" display="menu" matchMode="contains"
+                      [showMatchModes]="false" [showOperator]="false" [showAddButton]="false"></p-columnFilter>
+                  </div>
                 </div>
               </th>
               <th>
-                <div class="flex justify-content-center">
-                  Email
+                <div class="flex justify-content-center align-items-center">
+                  <div class="flex justify-content-center">
+                    Email
+                  </div>
+                  <div class="flex justify-content-between align-items-center">
+                    <p-columnFilter type="text" field="email" display="menu" matchMode="contains"
+                      [showMatchModes]="false" [showOperator]="false" [showAddButton]="false"></p-columnFilter>
+                  </div>
                 </div>
               </th>
-              <th>
-                <div class="flex justify-content-center">
-                  Perfil
+              <th *appHasRole="['ADMIN']">
+                <div class="flex justify-content-center align-items-center">
+                  <div class="flex justify-content-center">
+                    Perfil
+                  </div>
+                  <div class="flex justify-content-between align-items-center">
+                    <p-columnFilter type="text" field="perfil" display="menu" matchMode="contains"
+                      [showMatchModes]="false" [showOperator]="false" [showAddButton]="false"></p-columnFilter>
+                  </div>
                 </div>
               </th>
               <th>
@@ -75,18 +93,36 @@
           <ng-template pTemplate="header">
             <tr>
               <th>
-                <div class="flex justify-content-center">
-                  Nome
+                <div class="flex justify-content-center align-items-center">
+                  <div class="flex justify-content-center">
+                    Nome
+                  </div>
+                  <div class="flex justify-content-between align-items-center">
+                    <p-columnFilter type="text" field="nome" display="menu" matchMode="contains"
+                      [showMatchModes]="false" [showOperator]="false" [showAddButton]="false"></p-columnFilter>
+                  </div>
                 </div>
               </th>
               <th *appHasRole="['ADMIN']">
-                <div class="flex justify-content-center">
-                  Email
+                <div class="flex justify-content-center align-items-center">
+                  <div class="flex justify-content-center">
+                    Email
+                  </div>
+                  <div class="flex justify-content-between align-items-center">
+                    <p-columnFilter type="text" field="email" display="menu" matchMode="contains"
+                      [showMatchModes]="false" [showOperator]="false" [showAddButton]="false"></p-columnFilter>
+                  </div>
                 </div>
               </th>
               <th *appHasRole="['ADMIN']">
-                <div class="flex justify-content-center">
-                  Perfil
+                <div class="flex justify-content-center align-items-center">
+                  <div class="flex justify-content-center">
+                    Perfil
+                  </div>
+                  <div class="flex justify-content-between align-items-center">
+                    <p-columnFilter type="text" field="perfil" display="menu" matchMode="contains"
+                      [showMatchModes]="false" [showOperator]="false" [showAddButton]="false"></p-columnFilter>
+                  </div>
                 </div>
               </th>
               <th *appHasRole="['ADMIN']">
