--- a/src/app/modules/projetos/components/usuario-projetos-form/usuario-projetos-form.component.html
+++ b/src/app/modules/projetos/components/usuario-projetos-form/usuario-projetos-form.component.html
@@ -2,162 +2,44 @@
 <div class="form-container">
   <form>
     <div class="form-body">
-      <div class="form-field full-width" *ngIf="usuarioProjetoAction.event.action === addUsuarioProjetoEvent">
-        <label for="usuario">Projeto</label>
+      <div class="form-field">
+        <label for="projeto">Projeto</label>
         <span class="p-fluid">
-          <p-autoComplete [(ngModel)]="projetoSelecionado" [suggestions]="projetosFiltrados"
+          <p-autoComplete id="projeto" [(ngModel)]="projetoSelecionado" [suggestions]="projetosFiltrados"
             [ngModelOptions]="{standalone: true}" (onSelect)="findUsuariosDisponiveis($event)"
             (completeMethod)="filtrarProjeto($event)" field="nome" [forceSelection]="true"
-            placeholder="Digite o nome do projeto"></p-autoComplete>
+            placeholder="Digite o nome do projeto"
+            [disabled]="usuarioProjetoAction.event.action === editUsuarioProjetoEvent"></p-autoComplete>
         </span>
       </div>
 
-      <!-- Usuários Disponíveis -->
-      <div class="col" *appHasRole="['ADMIN']">
-        <h3>Usuários Disponíveis</h3>
-        <p-table [value]="usuariosDisponiveis" [paginator]="true" [rows]="3" dataKey="id">
-          <ng-template pTemplate="header">
-            <tr>
-              <th>
-                <div class="flex justify-content-center align-items-center">
-                  <div class="flex justify-content-center">
-                    Nome
-                  </div>
-                  <div class="flex justify-content-between align-items-center">
-                    <p-columnFilter type="text" field="nome" display="menu" matchMode="contains"
-                      [showMatchModes]="false" [showOperator]="false" [showAddButton]="false"></p-columnFilter>
-                  </div>
-                </div>
-              </th>
-              <th>
-                <div class="flex justify-content-center align-items-center">
-                  <div class="flex justify-content-center">
-                    Email
-                  </div>
-                  <div class="flex justify-content-between align-items-center">
-                    <p-columnFilter type="text" field="email" display="menu" matchMode="contains"
-                      [showMatchModes]="false" [showOperator]="false" [showAddButton]="false"></p-columnFilter>
-                  </div>
-                </div>
-              </th>
-              <th *appHasRole="['ADMIN']">
-                <div class="flex justify-content-center align-items-center">
-                  <div class="flex justify-content-center">
-                    Perfil
-                  </div>
-                  <div class="flex justify-content-between align-items-center">
-                    <p-columnFilter type="text" field="perfil" display="menu" matchMode="contains"
-                      [showMatchModes]="false" [showOperator]="false" [showAddButton]="false"></p-columnFilter>
-                  </div>
-                </div>
-              </th>
-              <th>
-                <div class="flex justify-content-center">
-                  Ação
-                </div>
-              </th>
-            </tr>
-          </ng-template>
-          <ng-template pTemplate="body" let-usuario>
-            <tr>
-              <td>
-                <div class="flex justify-content-center">
-                  {{ usuario.nome }}
-                </div>
-              </td>
-              <td>
-                <div class="flex justify-content-center">
-                  {{ usuario.email }}
-                </div>
-              </td>
-              <td>
-                <div class="flex justify-content-center">
-                  <p-tag [value]="usuario.perfil" [severity]="getPerfilSeverity(usuario.perfil)"></p-tag>
-                </div>
-              </td>
-              <td>
-                <div class="flex justify-content-center">
-                  <p-button styleClass="p-button-text p-button-rounded" icon="pi pi-plus"
-                    (click)="adicionarUsuario(usuario)"></p-button>
-                </div>
-              </td>
-            </tr>
-          </ng-template>
-        </p-table>
+      <div class="form-field">
+        <label for="usuarioResponsavel">Usuário Responsavél</label>
+        <span class="p-fluid">
+          <p-autoComplete id="usuarioResponsavel" [(ngModel)]="usuarioResponsavelSelecionado" field="nome"
+            [forceSelection]="true" [disabled]="true" [ngModelOptions]="{standalone: true}"></p-autoComplete>
+        </span>
       </div>
 
-      <div class="col">
-        <!-- Usuários Atribuídos ao Projeto -->
-        <h3 *appHasRole="['ADMIN']">Usuários no Projeto</h3>
-        <p-table [value]="usuariosDoProjeto" [paginator]="true" [rows]="3" dataKey="id">
-          <ng-template pTemplate="header">
-            <tr>
-              <th>
-                <div class="flex justify-content-center align-items-center">
-                  <div class="flex justify-content-center">
-                    Nome
-                  </div>
-                  <div class="flex justify-content-between align-items-center">
-                    <p-columnFilter type="text" field="nome" display="menu" matchMode="contains"
-                      [showMatchModes]="false" [showOperator]="false" [showAddButton]="false"></p-columnFilter>
-                  </div>
+      <div class="form-field full-width">
+        <p-pickList [source]=" usuariosDisponiveis" [target]="usuariosDoProjeto" sourceHeader="Disponíveis"
+          targetHeader="Equipe do Projeto" [dragdrop]="true" [responsive]="true" [sourceStyle]="{ height: '20rem' }"
+          [targetStyle]="{ height: '20rem' }" filterBy="nome" sourceFilterPlaceholder="Buscar por nome"
+          targetFilterPlaceholder="Buscar por nome" breakpoint="1400px" (onMoveToSource)="onMoveToSource($event)"
+          (onMoveToTarget)="onMoveToTarget($event)">
+          <ng-template let-usuario pTemplate="item">
+            <div class="flex flex-wrap p-2 align-items-center gap-3">
+              <div class="flex-1 flex flex-column gap-2">
+                <span class="font-bold">{{ usuario.nome }}</span>
+                <div class="flex align-products-center gap-2">
+                  <i class="pi pi-user text-sm"></i>
+                  <span>{{ usuario.email }}</span>
                 </div>
-              </th>
-              <th *appHasRole="['ADMIN']">
-                <div class="flex justify-content-center align-items-center">
-                  <div class="flex justify-content-center">
-                    Email
-                  </div>
-                  <div class="flex justify-content-between align-items-center">
-                    <p-columnFilter type="text" field="email" display="menu" matchMode="contains"
-                      [showMatchModes]="false" [showOperator]="false" [showAddButton]="false"></p-columnFilter>
-                  </div>
-                </div>
-              </th>
-              <th *appHasRole="['ADMIN']">
-                <div class="flex justify-content-center align-items-center">
-                  <div class="flex justify-content-center">
-                    Perfil
-                  </div>
-                  <div class="flex justify-content-between align-items-center">
-                    <p-columnFilter type="text" field="perfil" display="menu" matchMode="contains"
-                      [showMatchModes]="false" [showOperator]="false" [showAddButton]="false"></p-columnFilter>
-                  </div>
-                </div>
-              </th>
-              <th *appHasRole="['ADMIN']">
-                <div class="flex justify-content-center">
-                  Ação
-                </div>
-              </th>
-            </tr>
+              </div>
+              <p-tag [value]="usuario.perfil" [severity]="getPerfilSeverity(usuario.perfil)"></p-tag>
+            </div>
           </ng-template>
-          <ng-template pTemplate="body" let-usuario>
-            <tr>
-              <td>
-                <div class="flex justify-content-center">
-                  {{ usuario.nome }}
-                </div>
-              </td>
-              <td *appHasRole="['ADMIN']">
-                <div class="flex justify-content-center">
-                  {{ usuario.email }}
-                </div>
-              </td>
-              <td *appHasRole="['ADMIN']">
-                <div class="flex justify-content-center">
-                  <p-tag [value]="usuario.perfil" [severity]="getPerfilSeverity(usuario.perfil)"></p-tag>
-                </div>
-              </td>
-              <td *appHasRole="['ADMIN']">
-                <div class="flex justify-content-center">
-                  <p-button styleClass="p-button-text p-button-rounded p-button-danger" icon="pi pi-minus"
-                    (click)="removerUsuario(usuario)"></p-button>
-                </div>
-              </td>
-            </tr>
-          </ng-template>
-        </p-table>
+        </p-pickList>
       </div>
     </div>
   </form>
