--- a/src/app/modules/projetos/components/usuario-projetos-form/usuario-projetos-form.component.scss
+++ b/src/app/modules/projetos/components/usuario-projetos-form/usuario-projetos-form.component.scss
@@ -28,53 +28,35 @@
 }
 
 .form-body {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem * 1.5;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1.5rem;
+  margin-bottom: 1.5rem;
   width: 100%;
+}
 
-  .tables-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 1rem * 1.5;
-    width: 100%;
-  }
-
-  .col {
-    background: #fff;
-    border-radius: 8px;
-    padding: 1rem;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-    min-width: 0;
-
-    h3 {
-      color: #1e293b;
-      margin-bottom: 1rem;
-      font-size: 1rem;
-      font-weight: 500;
-    }
-  }
+.form-field.full-width {
+  grid-column: 1 / -1;
 }
 
 .form-field {
   display: flex;
   flex-direction: column;
-  gap: 1rem * 0.5;
-
-  &.full-width {
-    width: 100%;
-  }
+  gap: 0.5rem;
 
   label {
-    color: #64748b;
+    color: #475569;
     font-weight: 500;
     font-size: 0.875rem;
   }
 }
 
-.form-footer {
-  display: flex;
-  justify-content: flex-end;
+// Hide Picklist move all buttons
+::ng-deep {
+  .p-picklist-buttons .p-button:nth-child(2),
+  .p-picklist-buttons .p-button:nth-child(4) {
+    display: none !important;
+  }
 }
 
 @media screen and (max-width: 1024px) {
