--- a/src/app/modules/lancamento-horas/components/lancamento-horas-form/lancamento-horas-form.component.scss
+++ b/src/app/modules/lancamento-horas/components/lancamento-horas-form/lancamento-horas-form.component.scss
@@ -16,9 +16,16 @@
 }
 
 .form-body {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
   gap: 1.5rem;
+  margin-bottom: 1.5rem;
+  width: 100%;
+}
+
+// Full-width fields
+.form-field.full-width {
+  grid-column: 1 / -1;
 }
 
 .form-field {
@@ -80,6 +87,16 @@
       padding: 0.75rem;
     }
   }
+
+  textarea {
+    width: 100%;
+    border-radius: 8px;
+
+    &:focus {
+      border-color: #3b82f6;
+      box-shadow: 0 0 0 2px rgba(59, 130, 246, 0.1);
+    }
+  }
 }
 
 .error-message {
@@ -105,6 +122,23 @@
       &:disabled {
         opacity: 0.6;
       }
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .form-body {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 1.5rem;
+    width: 100%;
+  }
+
+  .form-footer {
+    flex-direction: column;
+
+    ::ng-deep .p-button {
+      width: 100%;
     }
   }
 }
