feat(projetos-table): implement status filtering via query parameters and enhance layout for better usability

--- a/src/app/modules/projetos/components/projetos-table/projetos-table.component.html
+++ b/src/app/modules/projetos/components/projetos-table/projetos-table.component.html
@@ -79,8 +79,16 @@
             </th>
 
             <th>
-              <div class="flex justify-content-center">
-                Status
+              <div class="flex justify-content-center align-items-center">
+                <div class="flex justify-content-center">
+                  Status
+                </div>
+                <div class="flex justify-content-between align-items-center">
+                  <p-columnFilter display="input" type="text" field="status" display="menu" matchMode="contains"
+                    [showMatchModes]="false" [showOperator]="false" [showAddButton]="false"
+                    [(ngModel)]="statusSelecionado" (ngModelChange)="dt.filter($event, 'status', 'contains')">
+                  </p-columnFilter>
+                </div>
               </div>
             </th>
 
