feat(notificacoes): add notification component and service for managing user notifications

--- a/src/app/shared/components/toolbar-navigation/toolbar-navigation.component.html
+++ b/src/app/shared/components/toolbar-navigation/toolbar-navigation.component.html
@@ -30,6 +30,7 @@
   </div>
 
   <div class="p-toolbar-group-end">
+    <app-notificacoes></app-notificacoes>
     <p-button label="Sair" icon="pi pi-sign-out" styleClass="logout-button" (onClick)="logout()">
     </p-button>
   </div>
