--- a/src/app/modules/home/page/dashboard-home/dashboard-home.component.html
+++ b/src/app/modules/home/page/dashboard-home/dashboard-home.component.html
@@ -15,15 +15,15 @@
       <p-card styleClass="dashboard-card h-full">
         <ng-template pTemplate="header">
           <div class="flex align-items-center p-3 border-bottom-1 border-300">
-            <i class="pi pi-briefcase text-primary text-xl mr-2"></i>
+            <i class="pi pi-briefcase text-orange-400 text-xl mr-2"></i>
             <h3 class="font-medium m-0">Projetos Ativos</h3>
           </div>
         </ng-template>
 
         <ng-template pTemplate="content">
           <div *ngIf="dashboardMetricaGeral; else loading" class="flex flex-column align-items-center p-3">
-            <span class="text-6xl font-bold text-primary">{{ dashboardMetricaGeral.projetosEmAndamento }}</span>
-            <p class="text-color-secondary mb-0 mt-2">Projetos em progresso</p>
+            <span class="text-6xl font-bold text-orange-400">{{ dashboardMetricaGeral.projetosEmAndamento }}</span>
+            <p class="text-color-secondary mb-0 mt-2">Projetos em Andamento</p>
           </div>
         </ng-template>
 
