--- a/src/app/modules/home/page/dashboard-home/dashboard-home.component.html
+++ b/src/app/modules/home/page/dashboard-home/dashboard-home.component.html
@@ -30,7 +30,7 @@
         <ng-template pTemplate="footer">
           <div class="flex justify-content-between px-2">
             <p-button label="Ver Detalhes" icon="pi pi-arrow-right" styleClass="p-button-text p-button-sm"
-              [routerLink]="['/projetos']" [queryParams]="{ filtro: 'Em Andamento' }">
+              [routerLink]="['/projetos']" [queryParams]="{ status: 'Em Andamento' }">
             </p-button>
             <p-button label="Novo Projeto" icon="pi pi-plus-circle" styleClass="p-button-text p-button-sm"
               (onClick)="handleCreateNovoProjeto()" *appHasRole="['ADMIN']">
@@ -65,7 +65,7 @@
         <ng-template pTemplate="footer">
           <div class="flex justify-content-between px-2">
             <p-button label="Ver Todas" icon="pi pi-arrow-right" styleClass="p-button-text p-button-sm"
-              [routerLink]="['/atividades']" [queryParams]="{ filtro: 'Aberta' }">
+              [routerLink]="['/atividades']" [queryParams]="{ status: 'Aberta' }">
             </p-button>
             <p-button label="Nova Atividade" icon="pi pi-plus-circle" styleClass="p-button-text p-button-sm"
               (onClick)="handleCreateNovaAtividade()" *appHasRole="['ADMIN']">
@@ -145,16 +145,12 @@
             <span class="text-6xl font-bold text-red-600">{{ dashboardMetricaGeral.atividadesAtrasadas }}</span>
             <p class="text-color-secondary mb-0 mt-2">Atividades Atrasadas</p>
           </div>
-          <ng-template #loading>
-            <div class="flex justify-content-center p-4">
-              <p-progressSpinner [style]="{width: '40px', height: '40px'}" strokeWidth="4"></p-progressSpinner>
-            </div>
-          </ng-template>
         </ng-template>
 
         <ng-template pTemplate="footer">
           <div class="flex justify-content-between px-2">
-            <p-button label="Visualizar" icon="pi pi-arrow-right" styleClass="p-button-text p-button-sm">
+            <p-button label="Visualizar" icon="pi pi-arrow-right" styleClass="p-button-text p-button-sm"
+              [routerLink]="['/atividades']" [queryParams]="{ filtro: 'Atrasadas' }">
             </p-button>
           </div>
         </ng-template>
