fix: add unique IDs to input fields for better accessibility

--- a/src/app/modules/lancamento-horas/components/lancamento-horas-table/lancamento-horas-table.component.html
+++ b/src/app/modules/lancamento-horas/components/lancamento-horas-table/lancamento-horas-table.component.html
@@ -19,7 +19,7 @@
             <h5 class="m-0">Lançamentos</h5>
             <div class="p-input-icon-left ml-3">
               <i class="pi pi-search"></i>
-              <input pInputText class="w-full" type="text" (input)="onGlobalFilter(lancamentosHorasTable, $event)"
+              <input id="buscar" pInputText class="w-full" type="text" (input)="onGlobalFilter(lancamentosHorasTable, $event)"
                 placeholder="Buscar..." />
             </div>
           </div>
