--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -9,12 +9,12 @@
     <form class="login-form" [formGroup]="loginForm" (ngSubmit)="onSubmitLogin()">
       <div class="input-group">
         <i class="pi pi-envelope"></i>
-        <input pInputText type="email" placeholder="Email" formControlName="email">
+        <input id="email" pInputText type="email" placeholder="Email" formControlName="email">
       </div>
 
       <div class="input-group">
         <i class="pi pi-lock"></i>
-        <input pInputText type="password" placeholder="Senha" formControlName="senha">
+        <input id="senha" pInputText type="password" placeholder="Senha" formControlName="senha">
       </div>
 
       <button pButton pRipple label="Login" icon="pi pi-user" class="w-full"
