--- a/src/app/modules/projetos/components/projetos-table/projetos-table.component.html
+++ b/src/app/modules/projetos/components/projetos-table/projetos-table.component.html
@@ -22,7 +22,7 @@
             <h5 class="m-0">Projetos</h5>
             <div class="p-input-icon-left ml-3">
               <i class="pi pi-search"></i>
-              <input pInputText class="w-full" type="text" (input)="onGlobalFilter(projetosTable, $event)"
+              <input id="buscar" pInputText class="w-full" type="text" (input)="onGlobalFilter(projetosTable, $event)"
                 placeholder="Buscar..." />
             </div>
           </div>
