refactor(dashboard): rename variable

--- a/src/app/modules/home/page/dashboard-home/dashboard-home.component.html
+++ b/src/app/modules/home/page/dashboard-home/dashboard-home.component.html
@@ -274,9 +274,9 @@
                   <i class="pi pi-chart-bar text-green-600 text-xl"></i>
                 </div>
                 <h3 class="m-0 text-xl font-medium text-green-700">
-                  {{dashboardMetricasAdmin.mediaHoraPorUsuario}}
+                  {{dashboardMetricasAdmin.mediaHorasMes}}
                 </h3>
-                <p class="text-color-secondary text-sm m-0 mt-1">Média Horas/Usuário</p>
+                <p class="text-color-secondary text-sm m-0 mt-1">Média Horas/Mês</p>
               </div>
             </div>
           </div>
