--- a/src/app/modules/atividades/components/atividades-table/atividades-table.component.html
+++ b/src/app/modules/atividades/components/atividades-table/atividades-table.component.html
@@ -94,8 +94,7 @@
                 </div>
                 <div class="flex justify-content-between align-items-center">
                   <p-columnFilter display="input" type="text" field="status" display="menu" matchMode="contains"
-                    [showMatchModes]="false" [showOperator]="false" [showAddButton]="false"
-                    [(ngModel)]="statusSelecionado" (ngModelChange)="dt.filter($event, 'status', 'contains')">
+                    [showMatchModes]="false" [showOperator]="false" [showAddButton]="false">
                   </p-columnFilter>
                 </div>
               </div>
